<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/layout_top_margin">
        <EditText
            android:id="@+id/player1input"
            android:layout_width="@dimen/input_box_width"
            android:layout_height="@dimen/input_box_length"
            android:text="@string/Player1name"
            android:textSize="@dimen/name_text_size"
            android:hint="@string/entername1"
            android:textColorHint="@color/mygray"
            android:onClick="ClickMaster"
            android:singleLine="true">
        </EditText>
                <ImageButton
                    android:id="@+id/p1button"
                    android:layout_width="@dimen/image_button_dimensions"
                    android:layout_height="@dimen/image_button_dimensions"
                    android:background="@color/myred"
                    android:onClick="ClickMaster">
                </ImageButton>
        </LinearLayout>
        <RatingBar
            android:id="@+id/ratingBar1"
            android:isIndicator="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="@integer/max_score"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/layout_top_margin">
                <EditText
                    android:id="@+id/player2input"
                    android:layout_width="@dimen/input_box_width"
                    android:layout_height="@dimen/input_box_length"
                    android:text="@string/Player2name"
                    android:textSize="@dimen/name_text_size"
                    android:hint="@string/entername2"
                    android:textColorHint="@color/mygray"
                    android:onClick="ClickMaster"
                    android:singleLine="true">
                </EditText>
                <ImageButton
                    android:id="@+id/p2button"
                    android:layout_width="@dimen/image_button_dimensions"
                    android:layout_height="@dimen/image_button_dimensions"
                    android:background="@color/mygreen"
                    android:onClick="ClickMaster">
                </ImageButton>
        </LinearLayout>
        <RatingBar
            android:id="@+id/ratingBar2"
            android:isIndicator="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="@integer/max_score"/>
        <Button
            android:id="@+id/playbutton"
            android:layout_marginTop="@dimen/play_button_margin"
            android:layout_width="@dimen/play_button_width"
            android:layout_height="@dimen/play_button_height"
            android:text="@string/play_string"
            android:textSize="@dimen/play_button_text_size"
            android:onClick="ClickMaster">
        </Button>

</LinearLayout>
